--- a/NGM.Wave.AcceptanceTests/NGM.Wave.AcceptanceTests.csproj
+++ b/NGM.Wave.AcceptanceTests/NGM.Wave.AcceptanceTests.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,7 +24,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -81,22 +81,22 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
+    <Content Include="App.config">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="QuickReplyPost.feature">
+    </Content>
+    <Content Include="QuickReplyPost.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>QuickReplyPost.feature.cs</LastGenOutput>
-    </None>
-    <None Include="CreateThread.feature">
+    </Content>
+    <Content Include="CreateThread.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>CreateThread.feature.cs</LastGenOutput>
-    </None>
-    <None Include="packages.config" />
-    <None Include="UsersViewingContent.feature">
+    </Content>
+    <Content Include="packages.config" />
+    <Content Include="UsersViewingContent.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>UsersViewingContent.feature.cs</LastGenOutput>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="chromedriver.exe">
